[gd_scene load_steps=15 format=3 uid="uid://dix3ggyek5ytx"]

[ext_resource type="Texture2D" uid="uid://mmhcpbyllk1c" path="res://Resources/pato/cima/sprite_0.png" id="1_458by"]
[ext_resource type="Script" uid="uid://uigk53enfbp7" path="res://pato.gd" id="1_ny35s"]
[ext_resource type="Texture2D" uid="uid://bst14pgxopyc1" path="res://Resources/pato/cima/sprite_1.png" id="2_ny35s"]
[ext_resource type="Texture2D" uid="uid://dluwgbl2nxm71" path="res://Resources/pato/cima/sprite_2.png" id="3_evpki"]
[ext_resource type="Texture2D" uid="uid://ubfnhlphby46" path="res://Resources/pato/lado/sprite_0.png" id="4_5p5ea"]
[ext_resource type="Texture2D" uid="uid://ceok7wjdh3lck" path="res://Resources/pato/lado/sprite_1.png" id="5_yvygc"]
[ext_resource type="Texture2D" uid="uid://dnt2iq1rcs25v" path="res://Resources/pato/lado/sprite_2.png" id="6_030ok"]
[ext_resource type="Texture2D" uid="uid://dfuff0m3h766o" path="res://Resources/pato/morte/0.png" id="7_ywi7w"]
[ext_resource type="Texture2D" uid="uid://bhc0hhrxplyu4" path="res://Resources/pato/morte/1.png" id="8_vw86d"]
[ext_resource type="Texture2D" uid="uid://l7isdhxqeb3s" path="res://Resources/pato/morte/2.png" id="9_wwo8d"]
[ext_resource type="Texture2D" uid="uid://d4faxfdjudl8x" path="res://Resources/pato/morte/3.png" id="10_t6mnj"]
[ext_resource type="Texture2D" uid="uid://ddsky45g2f3f" path="res://Resources/pato/susto.png" id="11_kpn0u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f4ou3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_458by")
}, {
"duration": 1.0,
"texture": ExtResource("2_ny35s")
}, {
"duration": 1.0,
"texture": ExtResource("3_evpki")
}],
"loop": true,
"name": &"cima",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5p5ea")
}, {
"duration": 1.0,
"texture": ExtResource("5_yvygc")
}, {
"duration": 1.0,
"texture": ExtResource("6_030ok")
}],
"loop": true,
"name": &"lado",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ywi7w")
}, {
"duration": 1.0,
"texture": ExtResource("8_vw86d")
}, {
"duration": 1.0,
"texture": ExtResource("9_wwo8d")
}, {
"duration": 1.0,
"texture": ExtResource("10_t6mnj")
}],
"loop": true,
"name": &"morte",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kpn0u")
}],
"loop": true,
"name": &"susto",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r3ve3"]
radius = 45.044422

[node name="pato" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_ny35s")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f4ou3")
animation = &"cima"
autoplay = "cima"
frame_progress = 0.40168855

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r3ve3")

[node name="movimento" type="Timer" parent="."]
autostart = true

[node name="anim" type="Timer" parent="."]
autostart = true

[node name="morte" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="movimento" to="." method="_on_movimento_timeout"]
[connection signal="timeout" from="anim" to="." method="_on_anim_timeout"]
[connection signal="timeout" from="morte" to="." method="_on_morte_timeout"]
